// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank [] is not blank 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[]",
        "text": "[]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank Blank in the [*** ] 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[*** ",
        "text": "[*** ",
        "type": "plain",
      },
      Object {
        "raw": "[ ]",
        "text": " ",
        "type": "blank",
      },
      Object {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank Blank in the sentence 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "sentence",
        "text": "sentence",
        "type": "plain",
      },
      Object {
        "raw": "[ ]",
        "text": " ",
        "type": "blank",
      },
      Object {
        "raw": "sentence",
        "text": "sentence",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank Multi char blank 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[ 　 	　	 ]",
        "text": " 　 	　	 ",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank Simple double-byte space blank 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[　]",
        "text": "　",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank Simple half-space blank 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[ ]",
        "text": " ",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank Simple tab blank 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[	]",
        "text": "	",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;
